...
    <string name="Already_A_Member_Text">Sei già iscritto? Vai al Login</string>
    <string name="Not_Correct_Fields">I campi non sono stati riempiti correttamente</string>
    <string name="dominio_unisannio">\u0040unisannio.it</string>
    <string name="dominio_studenti_unisannio">\u0040studenti.unisannio.it</string>

    <!-- stringhe per la LogDocenteActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_corsi">Corsi</string>
    <string name="menu_aggiungi_corso">Aggiungi Corso</string>
    <string name="nome_drower">nome</string>
    <string name="email_drower">email</string>
    <string name="desc_profilo">Immagine profilo</string>
...
    <string name="menu_post">Post</string>
    <string name="desc_icona">Icona contenuto</string>
    <string name="menu_visualizza_studenti_iscritti">Visualizza Studenti iscritti</string>
    <string name="menu_visualizza_richieste_studente">Visualizza Richieste Studenti</string>

    <!-- stringhe per la CorsoStudenteActivity -->
    <string name="menu_cancellazione_dal_corso">Abbandona il Corso</string>
    <string name="Dialog_titolo_conferma_cancellazione">Sei sicuro di voler abbandonare il corso?</string>
    <string name="Dialog_descrizione_conferma_cancellazione">Cosi facendo perderai tutti i dati relativi al corso</string>
    <string name="Dialog_button_si_conferma_cancellazione">Si</string>
    <string name="Dialog_button_no_conferma_cancellazione">No</string>
    <string name="Dialog_titolo_corretta_cancellazione">La cancellazione è avvenuta con successo</string>
    <string name="Dialog_titolo_incorretta_cancellazione">La cancellazione non è avvenuta con successo, riprova</string>
    <string name="Dialog_button_ok_cancellazione">OK</string>



...
